# ESP32_STUDY

./: README.md  REMADE
ledblink/: CMakeLists.txt  Makefile  sdkconfig
ledblink/components/led/: CMakeLists.txt
ledblink/components/led/include/: led.h
ledblink/components/led/src/: led.c  light_strip.cpp
ledblink/main/: CMakeLists.txt  ledblink.c
tcp+led/ledblink/: Makefile  sdkconfig
tcp+led/ledblink/components/led/: CMakeLists.txt
tcp_client_led/ledblink/: sdkconfig.old
tcp_client_led/ledblink/components/led/include/: led.h  light_strip.h  tcp_client.h
tcp_client_led/ledblink/components/led/src/: led.cpp
tcp_client_led/ledblink/main/: ledblink.cpp
tcp_server_led/ledblink/: CMakeLists.txt  sdkconfig  sdkconfig.old
tcp_server_led/ledblink/components/led/: CMakeLists.txt
tcp_server_led/ledblink/components/led/include/: tcp_server.h
tcp_server_led/ledblink/components/led/src/: tcp_client.cpp  tcp_server.cpp
tcp_server_led/ledblink/main/: CMakeLists.txt  Kconfig.projbuild  ledblink.cpp
