
idf_component_register(SRCS 
                            "ledblink.c"
                            "/home/ubuntu/tools/esp-idf/examples/common_components/led_strip/src"
                            "/home/ubuntu/Led/ledblink/components/led/src"
                    INCLUDE_DIRS "."
                                 "/home/ubuntu/tools/esp-idf/examples/common_components/led_strip/include"
                                 "/home/ubuntu/Led/ledblink/components/led/include")
